libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/PROG.NSP
DEFINE DATA LOCAL
END-DEFINE

IGNORE
END
